--- a/about.html
+++ b/about.html
@@ -12,19 +12,16 @@
                     <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About </a> </span>
                 </li>
                 <li>
                     <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
-                </li>
-                <li>
                     <span class = "localLink"><a href = "misc.html" title = "🦍️ Vault of knowledge 🦍️"> Archives </a></span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+                    <span class = "localLink"><a href = src/CV.pdf title = "Github"> CV </a></span>
                 </li>
             </ul>
         </header>
@@ -38,12 +35,12 @@
                     <br>
                     Name: Sean Morota Chu <br> <br>
                     University: UNSW Sydney <br><br>
-                    WAM: HD (85+) <br> <br>
-                    Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor <br><br>
+                    WAM: HD  <br> <br>
+                    Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor, Research Assistant (UNSW/Data61@CSIRO) <br><br>
                     Other commitments: Australian national U20 fencing team <br><br>
-                    Skills: C, C++, Python, HTML, CSS, JS, MATLAB, LaTeX. <br><br> <br>
+                    Skills: C, C++, Python, HTML, CSS, JS, Haskell,MATLAB, LaTeX. <br><br> <br>
                     Contact me: <a href = "mailto:seanmorotachu@gmail.com"> Gmail </a> <br><br>
-                    Resume: <a href = "../../../../Documents/normal_resume.pdf" download = "Sean's resume"> Download  </a> <br><br>
+                    Github: <a href = https://github.com/seanmchu title = "Github"> Github</a>
                 </p>
             </div>
         </div>
