--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
                     <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About </a> </span>
                 </li>
                 <li>
                     <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
-                </li>
-                <li>
                     <span class = "localLink"><a href = "misc.html" title = "🦍️ Vault of knowledge 🦍️"> Archives </a></span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+                    <span class = "localLink"><a href = src/CV.pdf title = "Github"> CV </a></span>
                 </li>
             </ul>
         </header>
@@ -32,11 +29,7 @@
             
         <div class = "MainInfo">
             <div id = "Name"><h1> Sean Morota Chu</h1> </div>  
-            <div id = "Occupation"><h2> UNSW Finance and Software Engineering student </h2></div> 
-            <audio controls autoplay loop ">
-                <source src="src/Chinggis.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio> 
+            <div id = "Occupation"><h2> UNSW Mathematics and Software Engineering student </h2></div> 
         </div>
     </body>
 </html>
