Change email very good

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor, Research Assistant (UNSW/Data61@CSIRO) <br><br>
                     Other commitments: Australian national U20 fencing team <br><br>
                     Skills: C, C++, Python, HTML, CSS, JS, Haskell,MATLAB, LaTeX. <br><br> <br>
-                    Contact me: <a href = "mailto:seanmorotachu@gmail.com"> Gmail </a> <br><br>
+                    Contact me: <a href = "mailto:smorotachu@acm.org"> Gmail </a> <br><br>
                     Github: <a href = https://github.com/seanmchu title = "Github"> Github</a>
                 </p>
             </div>
